# phoneme-informed-note-level-singing-transcription

./: .gitattributes  LICENSE  README.md  infer.py  pyproject.toml  requirements.txt
checkpoints/: model.pt
phn_ast/: decoding.py  feature.py  midi.py  model.py  phonerec_model.py  subnetworks.py
